_build/html/reports/chapter1_bakker_post.log
Traceback (most recent call last):
  File "/home/grabow/anaconda3/envs/jb/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/grabow/anaconda3/envs/jb/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/grabow/anaconda3/envs/jb/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/grabow/anaconda3/envs/jb/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/grabow/anaconda3/envs/jb/lib/python3.10/asyncio/base_events.py", line 646, in run_until_complete
    return future.result()
  File "/home/grabow/anaconda3/envs/jb/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/grabow/anaconda3/envs/jb/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/grabow/anaconda3/envs/jb/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
<img src="part_of_cover_bakker_post.png" width="800px">
------------------

[0;36m  Input [0;32mIn [1][0;36m[0m
[0;31m    <img src="part_of_cover_bakker_post.png" width="800px">[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (3185070016.py, line 1)

